--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-transformer-sharp": "^2.3.13",
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
+    "react-dark-mode-toggle": "0.0.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
