--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "gatsby": "^2.19.7",
-    "gatsby-cli": "^2.11.0",
+    "gatsby-cli": "^2.12.80",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-canonical-urls": "^2.2.3",
     "gatsby-plugin-feed": "^2.3.26",
     "gatsby-plugin-google-analytics": "^2.1.34",
     "gatsby-plugin-manifest": "^2.2.39",
@@ -19,6 +20,7 @@
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-plugin-typography": "^2.3.21",
     "gatsby-plugin-use-dark-mode": "^1.1.2",
+    "gatsby-plugin-yandex-metrica": "^0.1.3-check",
     "gatsby-remark-copy-linked-files": "^2.1.36",
     "gatsby-remark-images": "^3.1.42",
     "gatsby-remark-prismjs": "^3.3.30",
