--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "prismjs": "^1.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-feather": "^2.0.9",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.2.0",
     "terser": "^4.6.11"
