--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-sharp": "^3.0.0",
     "gatsby-plugin-styled-components": "^4.0.0",
-    "gatsby-plugin-yandex-metrica": "^0.1.3-check",
+    "gatsby-plugin-yandex-metrika": "^2.5.0",
     "gatsby-remark-autolink-headers": "^3.0.0",
     "gatsby-remark-copy-linked-files": "^3.0.0",
     "gatsby-remark-images": "^4.0.0",
@@ -58,8 +58,8 @@
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
     "prismjs": "^1.24.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-feather": "^2.0.9",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.2.0",
